arreglo de ruta relativa

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spotify Mock</title>
-  <link rel="stylesheet" href="/spotify.css">
+  <link rel="stylesheet" href="./spotify.css">
 </head>
 <body>
   <div class="container">
 
     <header>
       <a href="https://www.spotify.com" target="_blank" class="logo-link">
-        <div class="logo"><img src="/assets/pasted-image-0-4.png" alt=""></div>
+        <div class="logo"><img src="./assets/pasted-image-0-4.png" alt=""></div>
       </a>
       <nav>
         <div class="nav-buttons">
@@ -33,21 +33,21 @@
         <h2>Mis playlists</h2>
         <ul class="playlist-list">
           <li class="playlist-item">
-            <div class="cover"><img src="/assets/Spotify Premium 11_12_2024 23_27_13.png" alt=""></div>
+            <div class="cover"><img src="./assets/Spotify Premium 11_12_2024 23_27_13.png" alt=""></div>
             <div class="info">
               <p class="title">Rock Clásico</p>
               <p class="description">25 canciones</p>
             </div>
           </li>
           <li class="playlist-item">
-            <div class="cover"><img src="/assets/Spotify Premium 11_12_2024 23_25_26.png" alt=""></div>
+            <div class="cover"><img src="./assets/Spotify Premium 11_12_2024 23_25_26.png" alt=""></div>
             <div class="info">
               <p class="title">Night</p>
               <p class="description">15 canciones</p>
             </div>
           </li>
           <li class="playlist-item">
-            <div class="cover"><img src="/assets/Spotify Premium 11_12_2024 23_28_13.png" alt=""></div>
+            <div class="cover"><img src="./assets/Spotify Premium 11_12_2024 23_28_13.png" alt=""></div>
             <div class="info">
               <p class="title">Sad and Love</p>
               <p class="description">30 canciones</p>
@@ -60,14 +60,14 @@
         <h2>Novedades</h2>
         <ul class="song-list">
           <li class="song-item">
-            <div class="cover"><img src="/assets/Spotify Premium 12_12_2024 0_25_13.png" alt=""></div>
+            <div class="cover"><img src="./assets/Spotify Premium 12_12_2024 0_25_13.png" alt=""></div>
             <div class="info">
               <p class="title">Congratulations</p>
               <p class="artist">Mc Miller</p>
             </div>
           </li>
           <li class="song-item">
-            <div class="cover"><img src="/assets/Spotify Premium 12_12_2024 0_25_51.png" alt=""></div>
+            <div class="cover"><img src="./assets/Spotify Premium 12_12_2024 0_25_51.png" alt=""></div>
             <div class="info">
               <p class="title">Another Day in Paradise
                 </p>
@@ -75,7 +75,7 @@
             </div>
           </li>
           <li class="song-item">
-            <div class="cover"><img src="/assets/Spotify Premium 12_12_2024 0_26_33.png" alt=""></div>
+            <div class="cover"><img src="./assets/Spotify Premium 12_12_2024 0_26_33.png" alt=""></div>
             <div class="info">
               <p class="title">Brooklyn baby</p>
               <p class="artist">Lana del Rey</p>
@@ -87,7 +87,7 @@
 
     <footer>
       <div class="current-song">
-        <div class="cover"><img src="/assets/Spotify Premium 12_12_2024 0_33_31.png" alt=""></div>
+        <div class="cover"><img src="./assets/Spotify Premium 12_12_2024 0_33_31.png" alt=""></div>
         <div class="info">
           <p class="title">Father Stretch My Hands, Pt. 1</p>
           <p class="artist">Kanye</p>
